# dubjay

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
apple/: README.md  project.yml
apple/Dub/: Dub.entitlements  DubAppDelegate.swift  Info.plist  MainView.swift  MainWindowController.swift
apple/Dub/DesignSystem/: Tokens.swift
apple/Dub/Performance/: DeckHeader.swift  FileBrowserView.swift  PerformanceView.swift  Placeholders.swift  StatusStrip.swift  TrackOverviewView.swift
apple/Dub/Preferences/: PreferencesSheet.swift
apple/Dub/Waveform/: Shaders.metal  WaveformRenderer.swift  WaveformView.swift
apple/DubShared/: Package.swift
apple/DubShared/Sources/DubCore/: Placeholder.swift
crates/dub-audio/: Cargo.toml
crates/dub-audio/src/: error.rs  lib.rs  macos.rs
crates/dub-bpm/: Cargo.toml
crates/dub-bpm/src/: beats.rs  confidence.rs  estimator.rs  lib.rs  offline.rs  onset.rs  stream.rs  synthetic.rs  tempo.rs  tracker.rs
crates/dub-bpm/tests/: genre_octave.rs  known_bpm.rs  wav_pipeline.rs
crates/dub-cli/: Cargo.toml
crates/dub-cli/src/: analyze.rs  audio_routing.rs  calibrate.rs  calibration.rs  decode_timecode.rs  main.rs  scope.rs  thru.rs  timecode_deck.rs
crates/dub-engine/: Cargo.toml
crates/dub-engine/src/: command.rs  deck.rs  declick.rs  handle.rs  lib.rs  thru.rs  timecode.rs
crates/dub-ffi/: Cargo.toml
crates/dub-ffi/src/: lib.rs
crates/dub-io/src/: lib.rs  track.rs
crates/dub-peaks/: Cargo.toml
crates/dub-peaks/src/: band_decimator.rs  buffer.rs  decimator.rs  filtered.rs  lib.rs  offline.rs  onset.rs  stream.rs  synthetic.rs
crates/dub-peaks/tests/: end_to_end.rs
crates/dub-spectral/: Cargo.toml
crates/dub-spectral/src/: lib.rs
crates/dub-timecode/: Cargo.toml
crates/dub-timecode/src/: decoder.rs  format.rs  lib.rs  signal.rs
docs/: ARCHITECTURE.md  PRD.md  SHIPPED.md
scripts/: bootstrap.sh  build-xcframework.sh
tools/rt-audit/src/: main.rs
