[package]
name = "dub-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Headless smoke test + offline render harness for Dub."

[[bin]]
name = "dub"
path = "src/main.rs"

[dependencies]
dub-engine = { workspace = true }
dub-ffi = { workspace = true }
dub-io = { workspace = true }
dub-audio = { workspace = true }
dub-bpm = { workspace = true }
dub-peaks = { workspace = true }
dub-timecode = { workspace = true }
anyhow = { workspace = true }
hound = { workspace = true }
ringbuf = { workspace = true }
ratatui = "0.30.0"
crossterm = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3.45", features = ["formatting", "parsing", "serde"] }
