[package]
name = "dub-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Audio engine for Dub: graph, transport, RT-safety primitives."

[dependencies]
ringbuf = { workspace = true }
thiserror = { workspace = true }
dub-io = { workspace = true }

[dev-dependencies]
assert_no_alloc = { workspace = true }
proptest = { workspace = true }
