[package]
name = "dub-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Audio engine for Dub: graph, transport, RT-safety primitives."

[dependencies]
ringbuf = { workspace = true }
thiserror = { workspace = true }
dub-io = { workspace = true }
dub-timecode = { workspace = true }
# M8 — the engine wires Thru-source attach optionally to a
# `BpmStream` analysis thread. Only the dub-bpm types are pulled
# in here; spawning the thread is opt-in via
# `EngineHandle::attach_thru_source_with_bpm_tracking`.
dub-bpm = { workspace = true }
# M9 — same pattern as dub-bpm: optional waveform-peak capture
# wired through `EngineHandle::attach_thru_source_with_peaks_tracking`
# (or `_with_telemetry` for both at once).
dub-peaks = { workspace = true }

[dev-dependencies]
assert_no_alloc = { workspace = true }
proptest = { workspace = true }
