[package]
name = "dub-timecode"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Serato CV02 + Traktor MK2 timecode decoder. xwax-derived."

[dependencies]

[dev-dependencies]
assert_no_alloc = { workspace = true }
