[package]
name = "dub-timecode"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Serato CV02 + Traktor MK1/MK2 timecode decoder. Clean-room implementation from the xwax algorithm description; no xwax code copied. Relative mode only in v1."

[dependencies]

[dev-dependencies]
assert_no_alloc = { workspace = true }
